testsuite/tests/typecheck/should_fail/T12083a.stderr
T12083a.hs:7:1: error: [GHC-91510]
    • Illegal qualified type: Num a => a
    • In the type synonym declaration for ‘Constrd’
    Suggested fix:
      Perhaps you intended to use the ‘RankNTypes’ extension (implied by ‘ImpredicativeTypes’)

T12083a.hs:11:26: error: [GHC-25709]
    • Data constructor ‘ExistentiallyLost’ has existential type variables, a context, or a specialised result type
        ExistentiallyLost :: forall u. TC u => u -> ExistentiallyLost
    • In the definition of data constructor ‘ExistentiallyLost’
      In the data type declaration for ‘ExistentiallyLost’
    Suggested fix:
      Enable any of the following extensions: ‘ExistentialQuantification’ or ‘GADTs’

